--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,45 +9,28 @@
 <link
 	href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@700&display=swap"
 	rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link
-	href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap"
-	rel="stylesheet">
 </head>
 <body>
 	<h1>Are you a..</h1>
-	<br><br><br>
-	<div class="index_options">
-	<a href="visitor_login.html">
-		<div class="index_card">
-			<div class="index_visitor">
-				<h2>
-					Visitor
-				</h2>
-			</div>
+	<br>
+	<br>
+	<br>
+	<div class="flex_options">
+		<div class="flex_card index_visitor">
+			<h2>
+				<a href="visitor_login.html">Visitor</a>
+			</h2>
 		</div>
-		</a>
-		<br>
-		<a href="visitor_login.html">
-		<div class="index_card">
-			<div class="index_exhibitor">
-				<h2>
-					Exhibitor
-				</h2>
-			</div>
+		<div class="flex_card index_exhibitor">
+			<h2>
+				<a href="visitor_login.html">Exhibitor</a>
+			</h2>
 		</div>
-		</a>
-		<br>
-		<a href="visitor_login.html">
-		<div class="index_card">
-			<div class="index_manager">
-				<h2>
-					Manager
-				</h2>
-			</div>
+		<div class="flex_card index_manager">
+			<h2>
+				<a href="visitor_login.html">Manager</a>
+			</h2>
 		</div>
-		</a>
 	</div>
 	<br>
 </body>
