--- a/src/main/webapp/visitor_login.html
+++ b/src/main/webapp/visitor_login.html
@@ -13,8 +13,8 @@
 <body>
 	<h1>Login</h1><br><br>
 	<form method="POST" action="VisitorLoginServlet">
-		Email<br><input class="visitor_login_input" type="text" name="username"><br><br>
-		Password<br><input class="visitor_login_input" type="password" name="password"><br><br>
+		Email<br><br><input class="visitor_login_input" type="text" name="username"><br><br><br>
+		Password<br><br><input class="visitor_login_input" type="password" name="password"><br><br><br><br>
 		<button class="visitor_login_input" type="submit">Submit</button>
 	</form>
 </body>
